crates/bevy_macros_compile_fail_tests/tests/deref_mut_derive/missing_attribute.fail.stderr
error: deriving DerefMut on multi-field structs requires one field to have the `#[deref]` attribute
 --> tests/deref_mut_derive/missing_attribute.fail.rs:4:10
  |
4 | #[derive(DerefMut)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: deriving DerefMut on multi-field structs requires one field to have the `#[deref]` attribute
  --> tests/deref_mut_derive/missing_attribute.fail.rs:15:10
   |
15 | #[derive(DerefMut)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)
